<resources>
    <string name="app_name">pdf viewer</string>
    <string name="book">book</string>
    <string name="img10">TODO</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="chapter_3">Chapter-3</string>
    <string name="chapter_1">chapter-1</string>
    <string name="chapter_2">Chapter-2</string>
    <string name="chapter_4">Chapter-4</string>
    <string name="chapter_7">Chapter-7</string>
    <string name="chapter_5">Chapter-5</string>
    <string name="chapter_6">Chapter-6</string>
    <string name="chapter_8">Chapter-8</string>
    <string name="books">Books</string>
    <string name="read_your_favorite_children_s_books_with_your_classmates">Read your favorite children\'s books with your classmates!</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="todo">TODO</string>
    <string name="chapter_9">Chapter-9</string>
    <string name="chapter_10">Chapter-10</string>
    <string name="chapter_11">Chapter-11</string>
    <string name="chapter_12">Chapter-12</string>
    <string name="chapter_14">Chapter-14</string>
    <string name="chapter_13">Chapter-13</string>
    <string name="chapter_15">Chapter-15</string>
    <string name="chapter_16">Chapter-16</string>
    <string name="chapter_17">Chapter-17</string>
    <string name="chapter_18">Chapter-18</string>
    <string name="chapter_19">Chapter-19</string>
    <string name="chapter_20">Chapter-20</string>
    <string name="chapter_21">Chapter-21</string>
    <string name="chapter_22">Chapter-22</string>
    <string name="chapter_23">Chapter-23</string>
    <string name="chapter_24">Chapter-24</string>
    <string name="chapter_25">Chapter-25</string>
    <string name="chapter_26">Chapter-26</string>
    <string name="chapter_27">Chapter-27</string>
    <string name="chapter_28">Chapter-28</string>
    <string name="chapter_29">Chapter-29</string>
    <string name="chapter30">Chapter30</string>
    <string name="chapter_31">Chapter-31</string>
    <string name="chapter_32">Chapter-32</string>
    <string name="textview">TextView</string>
    <string name="action">ACTION</string>
    <string name="fantasy">FANTASY</string>
    <string name="horror">HORROR</string>
    <string name="historic">HISTORIC</string>
    <string name="mystric">MYSTRIC</string>
    <string name="comic">COMIC</string>
    <string name="classic">CLASSIC</string>
    <string name="friction">FRICTION</string>
</resources>