<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="831dp"
        android:contentDescription="@string/book"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992"
        app:srcCompat="@drawable/b" />


    <Button
        android:id="@+id/Action"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:backgroundTint="#ABF3E8E8"
        android:text="@string/action"
        android:textAlignment="center"
        android:textColor="#353232"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Fantasy"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ABF3E8E8"
        android:text="@string/fantasy"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <Button
        android:id="@+id/Horror"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:backgroundTint="#ABF3E8E8"
        android:text="@string/horror"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Historic"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ABF3E8E8"
        android:text="@string/historic"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Horror"
        app:layout_constraintVertical_bias="0.569" />

    <Button
        android:id="@+id/Mystric"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#ABF3E8E8"
        android:text="@string/mystric"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Comic"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="676dp"
        android:backgroundTint="#ABF3E8E8"
        android:text="@string/comic"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Classic"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:backgroundTint="#ABF3E8E8"
        android:text="@string/classic"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Mystric"
        app:layout_constraintEnd_toStartOf="@+id/Friction"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Friction"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ABF3E8E8"
        android:text="@string/friction"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Comic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

</androidx.constraintlayout.widget.ConstraintLayout>