<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="409dp"
        android:layout_height="881dp"
        android:contentDescription="@string/img10"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        app:srcCompat="@drawable/books_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="279dp"
        android:layout_height="96dp"
        android:fontFamily="@font/stoke"
        android:text="@string/books"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:text="@string/read_your_favorite_children_s_books_with_your_classmates"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFB300"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611"
        tools:text="Read your favorite children's books with your classmates!" />

    <Button
        android:id="@+id/b"
        android:layout_width="137dp"
        android:layout_height="47dp"
        android:background="#00FBFAFD"
        android:backgroundTint="#2CC3BBBB"
        android:text="@string/let_s_go"
        android:textColor="#DFEAE1E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

</androidx.constraintlayout.widget.ConstraintLayout>